NOT COMMITTED YET (OR EXPERIMENTAL):
====================================

Emacs-mode:

 * Small changes in whizzy-show-point (under mark, in commands).

Shell-script: 
 
 * Added quotes in "$INPUT/view.$$"
 * Wrapped dvicopy to make it atomic.

LaTeX macros:

Installation/Documentation:

 * Some macros for compatibility with XEamcs and version 22.
 * Documentation for whizzy-point-face.

SINCE LAST RELEASE:
===================

Emacs-mode:

 - version 1.3.1
 * fixed some quotes in configuration script.
 * added \jobname.wel configuration file 
 * added whizzy-autohide-cursor
 * fix section counters with multiple files. 
 * fix case-fold-search to nil in all whizzytex searches. 
 * added a trace of the Whizzy Cursor back into the Emacs buffer. 
 * enable redirection of navigation commands to previewer stdin.
 - version 1.3.0
 * Added backward compatibility of linemode with older versions. 
 - version 1.2.3
 * whizzy-toggle-debug not set whizzy-debug 
 * changed communication from whizzytex back to emacs.
 * added support for -pdf xpdf mode.
 * enter Emacs-debugger on fatal error when called in debug-mode.
 * change whizzy-sit-for for compatibility with Emacs on mac-os-10

Shell-script: 

 - version 1.3.1
 * fixed some quotes in configuration script.
 * added \jobname.wsh configuration file 
 * enable redirection of navigation commands to previewer stdin.

 - version 1.2.3
 * fix configure and checkconfig to allow -initex 'tex -ini'
 * changed communication from whizzytex back to emacs.
 * added support for -pdf xpdf mode.
 * write in .waux and read in .raux to be stable in face of errors

LaTeX macros:

 - version 1.3.0
 * Fix \label to work with hyperref...
 * Experimental auto-adjustment of counters (using \label).
 - version 1.2.3
 * some changes to allow anchors with pdftex driver.
 * fixed the problem with the new hypertex package (\scrollmode). 
 * set default hyperref option to hypertex (not best, but better than nothing)