@@ -4,8 +4,8 @@
 %
 %  Author         : Didier Remy <Didier.Remy@inria.fr>
 %  Version        : 1.2.2
-%  Bug Reports    : whizzytex-bugs@pauillac.inria.fr
-%  Web Site       : http://pauillac.inria.fr/whizzytex
+%  Bug Reports    : whizzytex-bugs@inria.fr
+%  Web Site       : http://gallium.inria.fr/whizzytex
 % 
 %  WhizzyTeX is free software; you can redistribute it and/or modify
 %  it under the terms of the GNU General Public License as published by
@@ -85,7 +85,7 @@ is an Emacs minor mode for incrementally
 viewing {\LaTeX} documents that you are editing.
 %
 It works under Unix with {\tt gv} and {\tt xdvi} viewers, but 
-the \href{http://pauillac.inria.fr/advi/}{\ActiveDVI} viewer will
+the \href{http://gallium.inria.fr/advi/}{\ActiveDVI} viewer will
 provide much better visual effects and offer more functionalities.
 
 In addition, when used with {\ActiveDVI}, {\Whizzy} allows for mouse
@@ -121,7 +121,7 @@ and easily fixable. Hence {\whizzy} should work with all distributions of
 
 \subsection {Get the source}
 Get the source {\tt whizzytex-\version.tgz} 
-from the \href{http://pauillac.inria.fr/whizzytex}{distribution}, 
+from the \href{http://gallium.inria.fr/whizzytex}{distribution}, 
 uncompress and untar it in some working directory, as follows:
 \begin{quote}
 \begin{tt}
@@ -1187,7 +1187,7 @@ and be used for only some documents.
 
 \subsection {Viewing with \ActiveDVI}
 
-\href{http://pauillac.inria.fr/advi/}{\ActiveDVI} is a DVI previewer with
+\href{http://gallium.inria.fr/advi/}{\ActiveDVI} is a DVI previewer with
 several additional features. 
 In particular, it recognizes extra specials, some of which are particular 
 useful for whizzytex that allows a two way communication between 
