@@ -63,6 +63,11 @@ The proof is similar.
 \end{proof}
 \end{drawer}
 
+\newpage
+\appendix
+
+\inputanswers{Proofs}
+
 
 
 \end{document}
