@@ -107,8 +107,9 @@ version 1.6.0 or higher.
 
 Installation and user manual are available in 
 <a href="whizzytex.html">HTML</a>,
-<a href="manual.ps">PS</a>, or
-<a href="manual.dvi">DVI</a> formats. 
+<a href="whizzytex.pdf">PDF</a>, or
+<a href="whizzytex.ps">PS</a>, or
+<a href="whizzytex.dvi">DVI</a> formats. 
 Most of the documentation is also available as online Emacs help 
 (via help for the function <tt>whizzytex-mode</tt> and following hyper-links). 
 
@@ -117,8 +118,8 @@ See also the <a href="@FAQ.html">FAQ</a>.
 
 <p>
 Send <a href="@FAQ.html#isitabug">bugs</a> to 
-<A HREF="mailto:whizzytex-bugs@pauillac.inria.fr">
-<tt>whizzytex-bugs@pauillac.inria.fr</tt></A>
+<A HREF="mailto:whizzytex-bugs@inria.fr">
+<tt>whizzytex-bugs@inria.fr</tt></A>
 
 <p>
 Join the <a href="https://sympa-rocq.inria.fr/wws/info/whizzytex">users'
@@ -142,8 +143,8 @@ both of then first clean the page, and redraw online. Even though
 annoying or worse make you feel a little unconfortable.
 
 Thus, we <strong>highly  recommend</strong>  the use of 
-<a href="http://pauillac.inria.fr/activedvi/">Active-DVI</a>,
-a DVI viewer written in <a href="http://pauillac.inria.fr/ocaml">OCaml</a>.
+<a href="http://gallium.inria.fr/activedvi/">Active-DVI</a>,
+a DVI viewer written in <a href="http://gallium.inria.fr/ocaml">OCaml</a>.
 
 <!--
 <p><em> Alternatively, there is a 
@@ -155,7 +156,7 @@ flushing the page all at once.  Then, call <code>gv</code>  with the option
 <code>-nopixmap</code>.  </em> 
 -->
 
-<h2><a href="http://pauillac.inria.fr/advi/">Active-DVI</a></h2>
+<h2><a href="http://gallium.inria.fr/advi/">Active-DVI</a></h2>
 
 <p> Active-DVI redraws a page in a background pixmap, and only display the
 completely formatted output. This avoids flashing, even on slow computers.
